--- a/Cubes/Base.lproj/Main.storyboard
+++ b/Cubes/Base.lproj/Main.storyboard
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -20,15 +18,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hc7-ga-yxF" userLabel="OpenGL View" customClass="OpenGLView">
-                                <rect key="frame" x="0.0" y="20" width="600" height="480"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="hc7-ga-yxF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="5mc-SV-Vzs"/>
-                            <constraint firstItem="hc7-ga-yxF" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.8" id="BsN-pj-4rt"/>
-                            <constraint firstItem="hc7-ga-yxF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="hmJ-9R-Vo2"/>
-                            <constraint firstItem="hc7-ga-yxF" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="t8F-h8-Otb"/>
+                            <constraint firstItem="hc7-ga-yxF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="4WT-0t-l2C"/>
+                            <constraint firstAttribute="trailing" secondItem="hc7-ga-yxF" secondAttribute="trailing" id="adz-JM-9HG"/>
+                            <constraint firstItem="hc7-ga-yxF" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="iUL-A4-S7O"/>
+                            <constraint firstItem="hc7-ga-yxF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tiy-4o-gck"/>
                         </constraints>
                     </view>
                 </viewController>
